@@ -116,6 +116,14 @@ public class MainApplication extends Application implements ReactApplication {
             }
 
             @Override
+            public void setStarterPageTemplatesTooltipShown(boolean tooltipShown) {
+            }
+
+            @Override
+            public void requestStarterPageTemplatesTooltipShown(StarterPageTemplatesTooltipShownCallback starterPageTemplatesTooltipShownCallback) {
+            }
+
+            @Override
             public void editorDidEmitLog(String message, LogLevel logLevel) {
                 switch (logLevel) {
                     case TRACE:
