@@ -39,6 +39,10 @@ public interface GutenbergBridgeJS2Parent extends RequestExecutor {
         void onMediaFileUploadFailed(int mediaId);
     }
 
+    interface StarterPageTemplatesTooltipShownCallback {
+        void onRequestStarterPageTemplatesTooltipShown(boolean tooltipShown);
+    }
+
     // Ref: https://github.com/facebook/react-native/blob/master/Libraries/polyfills/console.js#L376
     enum LogLevel {
         TRACE(0),
@@ -140,4 +144,8 @@ public interface GutenbergBridgeJS2Parent extends RequestExecutor {
     void logUserEvent(GutenbergUserEvent gutenbergUserEvent, ReadableMap eventProperties);
 
     void onAddMention(Consumer<String> onSuccess);
+    
+    void setStarterPageTemplatesTooltipShown(boolean tooltipShown);
+
+    void requestStarterPageTemplatesTooltipShown(StarterPageTemplatesTooltipShownCallback starterPageTemplatesTooltipShownCallback);
 }
