@@ -140,4 +140,12 @@ export function addMention() {
 	return RNReactNativeGutenbergBridge.addMention();
 }
 
+export function requestStarterPageTemplatesTooltipShown( callback ) {
+	return RNReactNativeGutenbergBridge.requestStarterPageTemplatesTooltipShown( callback );
+}
+
+export function setStarterPageTemplatesTooltipShown( tooltipShown ) {
+	return RNReactNativeGutenbergBridge.setStarterPageTemplatesTooltipShown( tooltipShown );
+}
+
 export default RNReactNativeGutenbergBridge;
