@@ -242,6 +242,17 @@ public class RNReactNativeGutenbergBridge: RCTEventEmitter {
             }
         })        
     }
+
+    @objc
+    func requestStarterPageTemplatesTooltipShown(_ callback: @escaping RCTResponseSenderBlock) {
+        callback([self.delegate?.gutenbergDidRequestStarterPageTemplatesTooltipShown() ?? false])
+    }
+    
+    @objc
+    func setStarterPageTemplatesTooltipShown(_ tooltipShown: Bool) {
+        self.delegate?.gutenbergDidRequestSetStarterPageTemplatesTooltipShown(tooltipShown)
+    }
+
 }
 
 // MARK: - RCTBridgeModule delegate
